[workspace]
resolver = "2"
members = [
    "packages/async-traits",
    "packages/kms",
    "packages/protected",
    "packages/password",
    "packages/permutation",
    "packages/random",
    "packages/traits",
    "packages/vitaminc",
]

[workspace.package]
documentation = "https://docs.rs/vitaminc"
version = "0.1.0-pre1"
repository = "https://github.com/cipherstash/vitaminc"
authors = ["Dan Draper <dan@cipherstash.com>"]
edition = "2021"
homepage = "https://cipherstash.com"
license = "MIT"
readme = "README.md"
keywords = ["cryptography", "security"]
categories = ["cryptography"]

[workspace.dependencies]
bitvec = "1.0.1"
rand = "0.8.5"
thiserror = "1.0.63"
zeroize = "1.8.1"
